tests/error/enum_errors/method_in_enum.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    v1 = {"x": int}

    @guppy
    def method(self):
        pass


MyEnum.compile()
